==================
 Docutils History
==================

:Author: David Goodger
:Contact: goodger@users.sourceforge.net
:Date: $Date$
:Web site: http://docutils.sourceforge.net/

.. contents::

Acknowledgements
================

I would like to acknowledge the people who have made a direct impact
on the Docutils project, knowingly or not, in terms of encouragement,
suggestions, criticism, bug reports, code contributions, tasty treats,
and related projects:

    Aahz, David Abrahams, David Ascher, Eric Bellot, Ian Bicking,
    Martin Blais, Fred Bremmer, Simon Budig, Bill Bumgarner, Brett
    Cannon, Adam Chodorowski, Jason Diamond, William Dode, Fred Drake,
    Dethe Elza, Marcus Ertl, Benja Fallenstein, fantasai, Stefane
    Fermigier, Jim Fulton, Peter Funk, Jorge Gonzalez, Engelbert
    Gruber, Simon Hefti, Doug Hellmann, Juergen Hermann, Michael
    Hudson, Marcelo Huerta San Martin, Ludger Humbert, Jeremy Hylton,
    Tony Ibbs, Alan Jaffray, Dmitry Jemerov, Richard Jones, Andreas
    Jung, Garth Kidd, Nicola Larosa, Daniel Larsson, Marc-Andre
    Lemburg, Julien Letessier, Wolfgang Lipp, Edward Loper, Dallas
    Mahrt, Ken Manheimer, Vasko Miroslav, Skip Montanaro, Paul Moore,
    Nigel W. Moriarty, Mark Nodine, Patrick K. O'Brien, Michel
    Pelletier, Sam Penrose, Tim Peters, Pearu Peterson, Mark Pilgrim,
    Brett g Porter, David Priest, Jens Quade, Andy Robinson, Tavis
    Rudd, Oliver Rutherfurd, Kenichi Sato, Ueli Schlaepfer, Gunnar
    Schwant, Bruce Smith, tav, Bob Tolbert, Paul Tremblay, Laurence
    Tratt, Guido van Rossum, Martin von Loewis, Greg Ward, Barry
    Warsaw, Edward Welbourne, Ka-Ping Yee, Moshe Zadka

Thank you!

(I'm still waiting for contributions of computer equipment and cold
hard cash :-).)  Hopefully I haven't forgotten anyone or misspelled
any names; apologies (and please let me know!) if I have.


Changes Since 0.2
========================

General:

* Renamed "attribute" to "option" for directives/extensions.
