@@ -5,6 +5,7 @@
 :Contact: goodger@users.sourceforge.net
 :Revision: $Revision$
 :Date: $Date$
+:Copyright: This document has been placed in the public domain.
 
 There are several problems, unresolved issues, and areas of
 controversy within StructuredText_ (Classic and Next Generation).  In
